# einstein_field.ai

./: .env.example  .gitignore  CONTRIBUTING.md  PLAN.md  README.md  agent_registry.json  checkpoint.txt  debug_event.json  docker-compose.yml  failing_job.json  flake.nix  jules_verify.sh  mutation_trace.md  planner_checkpoint.json  planner_checkpoint.md  pyproject.toml  requirements-dev.txt  wait_for_backend.py
.githooks/: pre-commit  pre-commit-notebook-check  pre-commit-sha-pin-check
.github/: CODEOWNERS
.github/PROVENANCE/: actions-pin.json
.github/workflows/: agent-integration.yml  ci-recovery.yml  citation-sync.yml  docker-ci.yml  docs.yml  enforce-sha-pin.yml  integration-tests.yml  langchain-audit.yml  notebook-ci.yml  pin-refresh.yml  validate-sha.yml
agents/: verifier_agent.py
agents/efai-agent/: efai_agent.py
agents/jules/: Dockerfile  PLAN.md  cli.py  executor.py  (+7 more)
backend/: main.py  requirements.txt
ci/: retrydiagnosticsaction.yml  validate_plan.py
cirecoveryengine/: __init__.py  agentselfdebug.py  cieventingestor.py  conflict_resolver.py  debugeventemitter.py  fallback_router.py  modelrouteragent.py  plannercheckpointemitter.py  tokenbudgetagent.py  validate_trace.py  validator.py
citations/: zotero_export.json
cli/: claude_cli.py  codex_cli.py  gemini_cli.py
docs/: index.md  pr4-readme.md
e2e_tests/: requirements.txt  test_submission.py
scripts/: check_conflicts.py  deepseek_smoke.py  pin-actions.sh  validate_secrets.py
tests/: test_deepseek_integration.py  test_flow.py  test_package_imports.py
utils/: io.py  provenance.py
(+62 files in other folders)
